--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "strapi": "3.5.0",
     "strapi-admin": "3.5.0",
-    "strapi-utils": "3.5.0",
-    "strapi-plugin-content-type-builder": "3.5.0",
+    "strapi-connector-mongoose": "3.5.0",
     "strapi-plugin-content-manager": "3.5.0",
-    "strapi-plugin-users-permissions": "3.5.0",
+    "strapi-plugin-content-type-builder": "3.5.0",
+    "strapi-plugin-documentation": "3.5.0",
     "strapi-plugin-email": "3.5.0",
     "strapi-plugin-upload": "3.5.0",
-    "strapi-connector-mongoose": "3.5.0"
+    "strapi-plugin-users-permissions": "3.5.0",
+    "strapi-utils": "3.5.0"
   },
   "author": {
     "name": "A Strapi developer"
