--- a/api/meal/models/meal.settings.json
+++ b/api/meal/models/meal.settings.json
@@ -16,6 +16,9 @@
     },
     "ingredients": {
       "collection": "ingredients"
+    },
+    "options": {
+      "collection": "options"
     }
   }
 }
